# enterprise_bot

./: .gitignore  README.md  pyproject.toml  requirements.txt  streamlit_app.py  test_agent.py
agents/: meeting_agent.py  meeting_scheduler_agent.py
data/: Chopra_Enterprise_Profile.docx  sales_and _revenue.csv
utils/: embedder.py  rag_search.py
